2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[test] Improve `pg-set-client-encoding' coverage.

	* basic.scm (test:various-connection-info): Ensure
	that the new encoding is actually different from the original.

2009-06-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres) proc: pg-mblen

	* basic.scm (test:mblen): New test proc.
	(main): Use new test proc; update expected-pass number.

2008-09-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use `(string-null? foo)' instead of `(string=? "" foo)'.

	* basic.scm (ok?): Use `string-null?'.

2008-08-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Tighten up "show-platform" a bit.

	* show-platform (recip): Use `RECIP'.
	(go): Avoid head(1).  Also, don't report libguile version.

2008-08-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Display env var PGHOST for aliveness testing.

	* alive.test: Display env var PGHOST value (or "unset" if #f).

2008-07-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Move Scheme code into src/.

	* runtest.in (tscm): Use "$ts/src".

2008-07-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Remove `pg-get-connection'.

	* basic.scm (test:get-connection): Pass unconditionally.

2008-05-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use absolute dir name to locate test/*.scm.

	* runtest.in (srcdir): Delete var.
	(ts): New var; use in `exec' invocation.
	(tscm): New var, exported.
	* testing.scm (manually-load): Use env var `tscm'.

2008-05-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	For "make check", drop result/connection object references when done.

	* testing.scm (d/c): New proc.
	(drop!): Use `d/c'.
	(create!): Delete proc.
	(fresh!): New proc.
	* basic.scm: Use `fresh!'.
	* large.scm: Use `fresh!'
	(main): Use `pg-finish'.
	* types-table.scm: Use `fresh!'.
	(test-m2): Do `(m2 'finish)'.
	(test-m3): Do `(m3 #:finish)'.
	(cleanup!): Do `(m #:finish)'.
	* meta.scm: Use `fresh!'; reset `RES' and `CONN'.

2008-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Clean up test environment GUILE_LOAD_PATH value.
